--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -8,5 +8,7 @@
   "idf.toolsPathWin": "C:\\Users\\panta\\.espressif",
   "idf.customExtraVars": {
     "IDF_TARGET": "esp32"
-  }
+  },
+  "idf.portWin": "COM3",
+  "idf.flashType": "UART"
 }
