--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,3 +6,5 @@ cmake_minimum_required(VERSION 3.5)
 
 include($ENV{IDF_PATH}/tools/cmake/project.cmake)
 project(mqtt-sensors)
+target_add_binary_data(mqtt-sensors.elf "main/mqtt_eclipseprojects_io.pem" TEXT)
+
