--- a/main/idf_component.yml
+++ b/main/idf_component.yml
@@ -1,3 +1,4 @@
 dependencies:
   protocol_examples_common:
     path: ${IDF_PATH}/examples/common_components/protocol_examples_common
+  zorxx/dht: ^1.0.1
